--- a/src/Components/Presence.css
+++ b/src/Components/Presence.css
@@ -145,7 +145,7 @@ table tbody tr{
   display: flex;
   align-items: center;
   justify-content: center;
-  color: #7e97b8;
+  color: #412945;
   z-index: 1;
   transition-duration: .5s;
   font-size: 1.04em;
