--- a/src/Components/Reglages.css
+++ b/src/Components/Reglages.css
@@ -1,19 +1,30 @@
 /* Reglages.css */
 
 .reglages-container {
-    font-family: Arial, sans-serif;
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     width: 100%;
     max-width: 800px;
     margin: 10px auto;
     margin-left: 10px;
+    box-shadow: 20px 20px 50px rgba(0, 0, 0, 0.25),-4px -2px 16px 0px #ffffff77;
+    border-top: 1px solid rgba(255,255,255,0.5);
+    border-right: 1px solid rgba(255, 255, 255, 0.5);
+    -webkit-backdrop-filter: blur(8px);
+    backdrop-filter: blur(8px);
+    transition: 0.3s ease;
+    background: #ffffff5d;
+    color: #412945;
+
   }
+ 
+  
   
   .change-password-container {
-    margin-top: 20px;
+    margin-top: 30px;
   }
   
   .password-input {
-    margin-bottom: 15px;
+    margin-bottom: 20px;
   }
   
   label {
@@ -129,6 +140,7 @@
   .username-input label {
     display: block;
     margin-bottom: 5px;
+    border-radius: 5px;
   }
   
   .password-input input,
@@ -137,5 +149,23 @@
     padding: 8px;
     border: 1px solid #ccc;
     border-radius: 4px;
+  }
+  .logoo {
+    text-align: center;
+    display: flex;
+  
+  }
+  
+  .logoo img {
+    width: 45px;
+    height: 45px;
+    border-radius: 50%;
+  }
+  
+  .logoo span {
+    font-weight: bold;
+    padding-left: 15px;
+    font-size: 18px;
+    text-transform: uppercase;
   }
   
