--- a/src/Components/Sidebar.css
+++ b/src/Components/Sidebar.css
@@ -13,7 +13,7 @@
 }
 body {
   
-  background-image: url('../Pics/23ff2103160faf2858b34739ed27b7bf.jpg');
+  background-image: url('../Pics/p1.png');
   height: 100%;
 }
 
@@ -24,23 +24,32 @@ nav {
   height: 95vh;  /* Ajustement de la hauteur */
   left: 0;
   width: 90px;
-  background: #1F7387;
+  background: #6e73ffdc;
   overflow: hidden;
   border-radius: 10px;
   transition: width 1s, opacity 1s;
   box-shadow: 20px 20px 50px rgba(0, 0, 0, 0.107), -4px -2px 16px 0px #ffffff2b;
   border-top: 1px solid rgba(255, 255, 255, 0.5);
   border-right: 1px solid rgba(255, 255, 255, 0.5);
+  
 }
 
 nav:hover {
  
   width:260px;
   transition: 0.7s;
-  background-color: transparent;
+  background-color: rgba(255, 255, 255, 0.358);
   backdrop-filter: blur(15px);
   -webkit-backdrop-filter: blur(8px);
+  background-image: url('../Pics/pharmacyt.png');
+
   
+}
+nav {
+  background-image: url('../Pics/pharmacy.png');
+  background-size: contain; /* Adjust size of the image */
+  background-repeat: no-repeat;
+  background-position: top;
 }
 
 .logo {
@@ -49,6 +58,7 @@ nav:hover {
   margin: 10px 0 0 10px;
   padding-bottom: 3rem;
 }
+
 
 .logo img {
   width: 45px;
@@ -63,16 +73,18 @@ nav:hover {
   text-transform: uppercase;
 }
 
-a {
+a{
   position: relative;
   width: 260px; /* Ajustement de la largeur */
   font-size: 15px;
-  color: var(--white);
+  color: var(--blue);
   display: table;
   padding: 10px;
-  font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif
+  font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif
   
 }
+
+
 
 nav .fas {
   position: relative;
@@ -81,25 +93,37 @@ nav .fas {
   top: 20px;
   font-size: 20px;
   text-align: center;
+  color: #412945;
+  
 
 }
+
 
 .nav-item {
   position: relative;
   top: 90x;
-  margin-left: 10px;
+  margin-left: 9px;
+  color: #412945;
+}
+.nav-itemm {
+  position: relative;
+  top: 90x;
+  margin-bottom: 50px;
+  margin-left: 9px;
+  color: #412945;
 }
 
+
+
 a:hover {
-  background: #1F7387;
-  color: #c5eadb;
+  color: #412945;
   border-radius: 10px;
   font-weight: bold;
   
 }
 
 a:hover i {
-  color: #c5eadb;
+  color: #B5E1E8;
   transition: 0.2s;
   animation: shake 0.5s ease-in-out;
 }
